# apertium-fin-fra

./: AUTHORS  Makefile.am  README  README.md  apertium-fin-fra.fin-fra.dix  apertium-fin-fra.fin-fra.rtx  apertium-fin-fra.fra-fin.t1x  autogen.sh  configure.ac  modes.xml
test/: fin-fra-generator-expected.txt  fin-fra-interchunk-expected.txt  fin-fra-lex-expected.txt  fin-fra-postchunk-expected.txt  tests.json
texts/: cuento.fra.txt
